updates, fixed spacing

--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -119,7 +119,7 @@ main {
     h1 {
         font-size: 40px;
         text-align: center;
-        margin-top: 40px;
+        margin-top: 100px;
         text-shadow: 2px 2px black;
     }   
 
@@ -140,7 +140,7 @@ main {
     h1 {
         font-size: 35px;
         text-align: center;
-        margin-top: 30px;
+        margin-top: 100px;
     }   
     .column {
         float: left;
@@ -148,7 +148,7 @@ main {
         text-align: center;
         margin-left: 5%;
         margin-right: 5%;
-        margin-top: 30px;
+        margin-top: 50px;
         font-size: 20px;
         margin-right:10px; 
         ul {
@@ -167,7 +167,7 @@ main {
 
     .centText {
         text-align: center;
-        margin-top: 30px;
+        margin-top: 50px;
         font-size: 20px;
     }
 
